Create build controls (order button)

--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -36,7 +36,7 @@
 }
 
 .OrderButton:not(:disabled) {
-    animation: enable 0.3s linear;
+    animation: enable 0.8s linear infinite;
 }
 
 @keyframes enable {
