Create NavigationItems component

--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,8 +1,8 @@
 .Logo {
   padding: 1rem;
-  height: 90%;
+  height: 80%;
   background-color: white;
-  border-radius: 50%;
+  border-radius: 1rem;
 }
 
 .Logo img { height: 100%; }
