--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,10 +1,24 @@
 .Item {
   padding: .5rem;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .Item a:link,
 .Item a:visited {
+  display: block;
   text-decoration: none;
   color: white;
   text-transform: uppercase;
+  height: 100%;
+  padding: 1.5rem 1rem;
+  border-bottom: .5rem solid transparent;
+}
+
+.Item a:hover,
+.Item a:active,
+.Item a.active {
+  background-color: #8F5C2C;
+  border-bottom:  .4rem solid #40A4C8;
 }
