--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,24 +1,47 @@
 .Item {
+  display: block;
+  margin: 1rem 0;
   padding: .5rem;
-  display: flex;
-  align-items: center;
-  height: 100%;
+  width: 100%;
 }
 
 .Item a:link,
 .Item a:visited {
   display: block;
   text-decoration: none;
-  color: white;
+  color: #8F5C2C;
   text-transform: uppercase;
-  height: 100%;
-  padding: 1.5rem 1rem;
-  border-bottom: .5rem solid transparent;
+  width: 100%;
 }
 
 .Item a:hover,
 .Item a:active,
 .Item a.active {
-  background-color: #8F5C2C;
-  border-bottom:  .4rem solid #40A4C8;
+  color: #40A4C8;
+}
+
+@media (min-width: 500px) {
+  .Item {
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 100%;
+  }
+
+  .Item a:link,
+  .Item a:visited {
+    color: white;
+    height: 100%;
+    width: auto;
+    padding: 1.5rem 1rem;
+    border-bottom: .5rem solid transparent;
+  }
+
+  .Item a:hover,
+  .Item a:active,
+  .Item a.active {
+    background-color: #8F5C2C;
+    border-bottom:  .4rem solid #40A4C8;
+    color: white;
+  }
 }
