--- a/src/components/UI/Spinner/Spinner.module.css
+++ b/src/components/UI/Spinner/Spinner.module.css
@@ -1,4 +1,4 @@
-.loader {
+.Loader {
   font-size: 10px;
   margin: 50px auto;
   text-indent: -9999em;
@@ -18,7 +18,7 @@
   -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
-.loader:before {
+.Loader:before {
   width: 50%;
   height: 50%;
   background: #8000ff;
@@ -28,7 +28,7 @@
   left: 0;
   content: '';
 }
-.loader:after {
+.Loader:after {
   background: #8000ff;
   width: 75%;
   height: 75%;
