Create Checkout component for routing

--- a/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
+++ b/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
@@ -1,3 +1,11 @@
 .Checkout {
-  height: 50vh;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+}
+
+@media (min-width: 600px) {
+  .Checkout {
+    width: 500px;
+  }
 }
