--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -5,6 +5,7 @@
     outline: none;
     cursor: pointer;
     font: inherit;
+    font-size: 1.6rem;
     padding: 10px;
     margin: 10px;
     font-weight: bold;
