--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,15 +1,26 @@
 .Modal {
     position: fixed;
+    left: 15%;
+    top: 30%;
     z-index: 500;
     background-color: white;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
-    top: 30%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+}
+
+h3 {
+  margin: 5px;
+  font-size: 2rem;
+}
+
+p,
+li {
+  margin: 1rem;
+  font-size: 1.6rem;
 }
 
 @media (min-width: 600px) {
