--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,12 +1,12 @@
-.Item {
+.NavigationItem {
   display: block;
   margin: 1rem 0;
   padding: .5rem;
   width: 100%;
 }
 
-.Item a:link,
-.Item a:visited {
+.NavigationItem a:link,
+.NavigationItem a:visited {
   display: block;
   text-decoration: none;
   color: #8F5C2C;
@@ -14,22 +14,22 @@
   width: 100%;
 }
 
-.Item a:hover,
-.Item a:active,
-.Item a.active {
+.NavigationItem a:hover,
+.NavigationItem a:active,
+.NavigationItem a.active {
   color: #40A4C8;
 }
 
 @media (min-width: 500px) {
-  .Item {
+  .NavigationItem {
     display: flex;
     align-items: center;
     width: auto;
     height: 100%;
   }
 
-  .Item a:link,
-  .Item a:visited {
+  .NavigationItem a:link,
+  .NavigationItem a:visited {
     color: white;
     height: 100%;
     width: auto;
@@ -37,9 +37,9 @@
     border-bottom: .5rem solid transparent;
   }
 
-  .Item a:hover,
-  .Item a:active,
-  .Item a.active {
+  .NavigationItem a:hover,
+  .NavigationItem a:active,
+  .NavigationItem a.active {
     background-color: #8F5C2C;
     border-bottom:  .4rem solid #40A4C8;
     color: white;
