--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -20,6 +20,10 @@
   width: 100%;
 }
 
+.NotValid {
+  border: 2px solid red;
+}
+
 .InputElement:focus {
   outline: none;
   background-color: #ccc;
