--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -11,15 +11,20 @@
     font-weight: bold;
 }
 
+.Button:active:hover { transform: translateY(-2px); }
 .Button:active { transform: translateY(2px); }
+.Button:disabled {
+  color: hsla(84, 90%, 30%, .5);
+  cursor: not-allowed;
+}
 
 .Button:first-of-type {
     margin-left: 0;
     padding-left: 0;
 }
 
-.Success { color: #5C9210; }
-.Success:active { color: hsl(84, 79%, 40%); }
+.Success { color: hsl(84, 90%, 30%); }
+.Success:active { color: hsl(84, 90%, 40%); }
 
 
 .Danger { color: #944317; }
