--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -11,7 +11,7 @@
     font-weight: bold;
 }
 
-.Button:active:hover { transform: translateY(-2px); }
+.Button:hover { transform: translateY(-2px); }
 .Button:active { transform: translateY(2px); }
 .Button:disabled {
   color: hsla(84, 90%, 30%, .5);
